# umock_c_example

./: CMakeLists.txt  readme.md
src/: CMakeLists.txt  main.c  pythagorean.c  square_root.c  square_root.h
tests/: CMakeLists.txt
tests/pythagorean_ut/: CMakeLists.txt  main.c  pythagorean_ut.c
testtools/: CMakeLists.txt
testtools/ctest/: CMakeLists.txt
testtools/test_runner/: CMakeLists.txt
testtools/umock_c/: CMakeLists.txt
testtools/umock_c/src/: umock_c_internal.h
